--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -15,20 +15,21 @@ svg {
 }
 
 body {
-  width: calc(100% - 3rem);
+  width: calc(100% - 2rem);
   max-width: 80ch;
   min-width: 25rem;
   margin: 0 auto;
-  padding-top: 3rem;
+  padding-top: 2rem;
   background: hsl(0, 0%, 10%);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  gap: 3rem;
+  gap: 2rem;
   text-align: center;
 }
 
@@ -36,18 +37,52 @@ body {
   visibility: hidden;
 }
 
+.win {
+  color: hsl(120, 100%, 35%);
+  font-size: 115%;
+}
+
+.lose {
+  color: hsl(0, 100%, 50%);
+  font-size: 115%;
+}
+
 h1 {
   font-size: 3.5rem;
   margin-block: 1rem;
 }
+
 h2 {
   font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.grid-buttons {
   margin-block: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+button {
+  cursor: pointer;
+  font-size: 1.5rem;
+  background-color: hsl(207, 100%, 42%);
+  border: 2px solid hsl(207, 100%, 32%);
+  border-radius: 0.25rem;
+  color: white;
+  padding: 0.5rem 1rem;
+}
+
+button:disabled {
+  opacity: 0.75;
+  color: hsl(240, 50%, 80%);
 }
 
 /* GAME */
 .game {
-  min-height: 10rem;
+  min-height: 14rem;
+  padding: 0.5rem;
 }
 
 /* DRUMS */
@@ -56,10 +91,18 @@ h2 {
 }
 
 .drum-button {
-  cursor: pointer;
-  /* transition: all 0.3s linear; */
+  cursor: not-allowed;
+  transition: transform 0.2s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-transform: uppercase;
 }
 
 .drum-button.active {
   transform: scale(1.2);
+}
+
+.drum-button span {
+  font-size: 0.75rem;
 }
