--- a/tutorial/static/revealjs/custom.css
+++ b/tutorial/static/revealjs/custom.css
@@ -1,3 +1,34 @@
+.placeholder {
+  z-index: -10;
+  height: 100vh;
+  width: 100vw;
+  font-size: 3rem;
+  background-color: #191919;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.spinner {
+  /* https://10015.io/tools/css-loader-generator */
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 9px solid;
+  border-color: #dbdcef;
+  border-right-color: #0a91ff;
+  animation: spinner-d3wgkg 1s infinite linear;
+}
+
+@keyframes spinner-d3wgkg {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
 strong {
   color: hsl(27, 100%, 65%);
 }
